sass/parts/_pubs.scss
/* sections lists */
.publist {
    list-style: none;
    padding: 0;
    /* padding-left: 1.5rem; */
  }
  
  .publist-item {
    margin-bottom: 1.8rem;
    background-color: var(--bg-darker);
    padding: 1rem;
    border-radius: 20px;
  }
  
  .publist-item p {
    margin-top: 0.5rem;
    margin-bottom: 0;
    font-size: 1.1rem;
  }
  
  .publist-links {
    list-style: none;
    font-size: 1.05rem;
    padding-left: 0;
  }
  
  .publist-links li {
    display: inline-block;
    margin-right: 0.4rem;
    padding: 0.35rem 0.5rem;
  }
  
  .publist-links li > a{
    color: var(--accent);
  }
  

  
  /* pages classes */
  // .pub-container {
  //   // max-width: 760px;
  //   // padding: 0 1.25rem;
  //   margin: 0 auto;
  // }
  
  .pub-buttons {
    list-style: none;
    font-size: 1.05rem;
    // margin-bottom: 2.8rem;
    padding-left: 0;
  }
  
  .pub-buttons li {
    display: inline-block;
    margin-right: 0.4rem;
    padding: 0.35rem 0.5rem;
    background-color: var(--bg-darker);
    margin-bottom: 0.5rem;
  }
  
  .pub-metadata {
    list-style: none;
    padding: 0;
    margin-bottom: 1.3em;
    font-size: 1.1rem;
  }
  
  .pub-metadata li {
    margin-bottom: 0.5rem;
  }
  
  .pub-tag {
    font-style: italic;
    padding: 0 2px;
  }
  
  .pub-author,
  .pub-author:visited {
    color: var(--text);

  }
  
  .pub-author:hover {
    color: var(--hover-color);
    background-color: var(--primary-color);
  }
  
  /* bibtex code */
  .bib-data {
    background-color: var(--pre-bg);
    font-size: 0.8rem;
    margin-top: 0;
  }
  
  .bib-data code {
    color: var(--accent-bg);
  }
  
  .doi-link {
    text-align: center;
  }
  

